{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "0547136d-4db2-4784-af6b-128b19e18f10",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "a3a28ac3-73a2-401a-9203-80a90cd482d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e454669-87ef-46c6-9657-0a9a1a39f3cf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControl",
            "id": "49c8f4c4-b11c-4764-8b48-c10e3dd5ee17",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "16ad51df-9fc6-4f83-8682-6cde6b92c004",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c4cfe32-ec42-40a3-877f-63dbc7d9c334",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}